5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_2711.log
== TEST (2019-04-14 17:27:08) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

ve = ((4*pi)*(r*r*r))/3
vc = ((pi*x*x)*(3*r-x))/3
if ((a==2),round(vc,4)):
	print(round(ve,4))
else: 
	print(round(vc,4))
-- OUTPUT:
268082573.1063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:39:17) 
-- CODE:
v=float(input("valor:"))
q=int(input("quantidade:"))
ru=float(input("ru:"))
qp=int(input("qp:"))
valorpasse=float(input("valor passe :"))

total=float(q*ru+qp*valorpasse)

if(valor>=total):
	print("SUFICIENTE")
else:
	print("INSUFICENTE")
-- EXECUTION TIME:
0.188789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2711/main.py", line 9, in <module>
    if(valor>=total):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:39:25) 
-- CODE:
v=float(input("valor:"))
q=int(input("quantidade:"))
ru=float(input("ru:"))
qp=int(input("qp:"))
valorpasse=float(input("valor passe :"))

total=float(q*ru+qp*valorpasse)

if(valor>=total):
	print("SUFICIENTE")
else:
	print("INSUFICENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(valor>=total):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:40:10) 
-- CODE:
v=float(input("valor:"))
q=int(input("quantidade:"))
ru=float(input("ru:"))
qp=int(input("qp:"))
valorpasse=float(input("valor passe :"))

total=float(q*ru+qp*valorpasse)

if(v >=total):
	print("SUFICIENTE")
else:
	print("INSUFICENTE")
-- EXECUTION TIME:
0.148524
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:40:15) 
-- CODE:
v=float(input("valor:"))
q=int(input("quantidade:"))
ru=float(input("ru:"))
qp=int(input("qp:"))
valorpasse=float(input("valor passe :"))

total=float(q*ru+qp*valorpasse)

if(v >=total):
	print("SUFICIENTE")
else:
	print("INSUFICENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:40:50) 
-- CODE:
v=float(input("valor:"))
q=int(input("quantidade:"))
ru=float(input("ru:"))
qp=int(input("qp:"))
valorpasse=float(input("valor passe :"))

total=float(q*ru+qp*valorpasse)

if(v >=total):
	print("SUFICIENTE")
else:
	print("INSUFICENTE")
-- EXECUTION TIME:
0.166095
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:42:32) 
-- CODE:
valor=float(input("valor:"))
q=int(input("quantidade:"))
ru=float(input("ru:"))
qp=int(input("qp:"))
valorpasse=float(input("valor passe :"))

total=float(q*ru+qp*valorpasse)

if(valor >=total):
	mensagem= "SUFICIENTE"
	print(mensagem)
else:
	mensagem= "INSUFICIENTE"
	print(mensagem")
-- EXECUTION TIME:
0.195103
-- ERROR:
  File "/home/codebench/codes/1635/2711/main.py", line 14
    print(mensagem")
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:44:57) 
-- CODE:
valor=float(input("valor:"))
quantru=int(input("quantidade:"))
valorru=float(input("ru:"))
quantpasse=int(input("qp:"))
valorpasse=float(input("valor passe :"))
total=float(quantru*valorru + quantpasse*valorpasse)

if(valor >=total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem")
-- EXECUTION TIME:
0.16965
-- ERROR:
  File "/home/codebench/codes/1635/2711/main.py", line 13
    print(mensagem")
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:44:59) 
-- CODE:
valor=float(input("valor:"))
quantru=int(input("quantidade:"))
valorru=float(input("ru:"))
quantpasse=int(input("qp:"))
valorpasse=float(input("valor passe :"))
total=float(quantru*valorru + quantpasse*valorpasse)

if(valor >=total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem")
-- ERROR:
File "XXXX", line 13
    print(mensagem")
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:45:58) 
-- CODE:
valor=float(input("valor:"))
quantru=int(input("quantidade:"))
valorru=float(input("ru:"))
quantpasse=int(input("qp:"))
valorpasse=float(input("valor passe :"))
total=float(quantru*valorru + quantpasse*valorpasse)

if(valor >=total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.172201
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
